--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <span class="logo">Travel</span> together ! 
                 </h1>
                 <ul class="nav">
-                    <li> <a href="#">COUNTRIES</a></li>
+                    <li> <a href="cont.html">COUNTRIES</a></li>
                     <li> <a href="#">MEMBERS</a></li>
                     <li> <a href="#">OVERVIEW</a></li>
                 </ul>
