--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </h1>
                 <ul class="nav">
                     <li> <a href="countries.html">COUNTRIES</a></li>
-                    <li> <a href="#">MEMBERS</a></li>
+                    <li> <a href="members.html">MEMBERS</a></li>
                     <li> <a href="#">OVERVIEW</a></li>
                 </ul>
             
