--- a/countries.html
+++ b/countries.html
@@ -19,7 +19,7 @@
                 </h1>
                 <ul class="nav">
                     <li> <a href="#">COUNTRIES</a></li>
-                    <li> <a href="#">MEMBERS</a></li>
+                    <li> <a href="member.html">MEMBERS</a></li>
                     <li> <a href="#">OVERVIEW</a></li>
                 </ul>
             
